Style has changed

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div id="headerDiv">
+        <header>
+            Movie List        
+        </header>
+    </div>
    
     <div id="container">
         <div id="inputDiv">
