--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         </div>
     </div>
 
+    <div>
+        <footer>
+            <p class="love">Made with ❤️ by Berkay Karakoç</p>
+        </footer>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
