--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/png" href="Letter-M-blue-icon.png"/>
 </head>
 <body>
     <div id="headerDiv">
