--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div id="headerDiv">
-        <header>
+        <header id="header">
             Movie List        
         </header>
     </div>
