Alerts are organized

--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
             Movie List
         </header>
     </div>
-   
     <div id="container">
         <div id="inputDiv">
             <input id="movieInput" type="text" placeholder="Add Movie...">
             <button id="addBtn" class="inputBtns" type="button">Add</button>
             <button id="clearBtn" onclick="customComfirm()" class="inputBtns" type="button">Clear</button>
+        </div>
+        <div id="alertDiv">
+            <ul id="alertList"></ul>
         </div>
         <div id="movieDiv">
             <ul id="movieList"></ul>
